BGM.h追加 variavle内のBGM関数移動

--- a/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="flag.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="BGM.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
