--- a/SakuhinⅣ/SakuhinⅣ.vcxproj
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BGM.h" />
     <ClInclude Include="class.h" />
     <ClInclude Include="define.h" />
     <ClInclude Include="enum.h" />
