--- a/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="TITLE.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="CharaCollision.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
