define内のBGM_PATHの名前を修正 BGM.hで読込+削除処理追加

--- a/SakuhinⅣ/SakuhinⅣ.vcxproj
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="enum.h" />
     <ClInclude Include="flag.h" />
     <ClInclude Include="GameProcHeader.h" />
+    <ClInclude Include="image.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="movement.h" />
     <ClInclude Include="textevent.h" />
