--- a/SakuhinⅣ/SakuhinⅣ.vcxproj
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="variable.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BGM.cpp" />
     <ClCompile Include="CharaCollision.cpp" />
     <ClCompile Include="GameProc.cpp" />
     <ClCompile Include="main.cpp" />
