--- a/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="CharaCollision.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="BGM.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
