--- a/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClCompile Include="BGM.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="TextEvent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
