--- a/SakuhinⅣ/SakuhinⅣ.vcxproj
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BGM.cpp" />
+    <ClCompile Include="CharaCollision.cpp" />
     <ClCompile Include="GameProc.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="main.cpp" />
