--- a/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
+++ b/SakuhinⅣ/SakuhinⅣ.vcxproj.filters
@@ -77,5 +77,11 @@
     <ClCompile Include="CharaCollision.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SAVE.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="TextEvent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
